--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -56,6 +56,7 @@ body {
 
 
 .card {
+  position: relative;
   display:block;
   border-radius:4px;
   float:left;
@@ -73,6 +74,36 @@ body {
 
 .dealer {
   font-size: 24px;
+}
+
+.dealer_hand {
+  align-content: center;
+  border-radius: 4px;
+  position: relative;
+  left: 45%;
+}
+
+.player {
+  position: absolute;
+  top: 350px;
+  left: 300px;
+  font-size: 24px;
+  align-content: center;
+}
+
+.player_hand {
+
+}
+
+.money {
+  position: absolute;
+  bottom: 50px;
+}
+
+.bet {
+  position: absolute;
+  bottom: 50px;
+  right: 20px;
 }
 
 .controls {
